# semgrep-pretty-report

./: .gitignore  LICENSE  README.md  pyproject.toml  sample-report.html  semgrep-report-sample.json
semgrep_pretty_report/: __init__.py  __main__.py  semgrep_report.py
